# C-3D-Graphics

./: .gitignore  CMakeLists.txt  CMakeSettings.json
archive/: types.h
include/: point.h  vector.h
include/libs/: tinyobj_loader_c.h
include/threedee/: bitmap.h  draw.h  line.h  math.h  matrix.h  obj_loader.h  ops.h  s_t_r.h  tga.h  types.h
src/: bitmap.c  draw.c  line.c  math.c  matrix.c  obj_loader.c  point.c  s_t_r.c  tga.c  types.c  vector.c
tests/: console_test.c  draw_test.c  gdi_test.c
